--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "imask": "^7.6.1",
     "mongodb": "^6.9.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
